# python-scientific-computing-utils

./: .gitignore  README.md
.devcontainer/: Dockerfile.dolfinx-mpc-vscode  build_complex_dolfinx_mpc.sh  devcontainer.json  post_start_command.sh
demos/PETSc-SLEPc-SciPy/: PETSc-matrix-creation.py  TS-heat-equation-FDM.py  complexEigenvalueProblem.py  rootfinding.py  test_kron_vector.py
demos/PETSc-SLEPc-SciPy/Laplacian-FDM/: Laplacian-FDM-1D.lyx  Laplacian-FDM-2D.lyx  Poisson_FDM_1D_examples.py
demos/fenics/: Dirichlet_boundary_condition_with_fenics.py  Poisson_fenics.py  Poisson_fenics_script.py  demo_dg-poisson.py  demo_periodic_square.py  fenics_basics_of_using_gmsh.py  fenics_complex_eigenvalue_problem.py  fenics_mixed_Laplace.py  fenics_periodicity_using_gmsh.py
demos/fenics/mesh/: Circle-simple.geo  torusdouble.geo
demos/fenicsx/: helmholtz_dtn.py  laplacian.py  laplacian_convergence.py  laplacian_dtn.py  laplacian_monodimensional.py  laplacian_periodic.py  laplacian_periodic_Euler-coordinates.py  laplacian_periodic_direct.py  laplacian_vector.py
demos/gmsh/: gmsh_utils_examples.py  meshio_utils_examples.py
demos/gmsh/mesh/: torus.geo
demos/multiphenics/: heat-equation-Assimulo.py  heat-equation-TS.py  heat-equation-semilinear-TS.py  laplace-eigenvalues.py  maxwell-eigenvalues-no-multiplier.py  maxwell-eigenvalues-with-multiplier.py  maxwell-no-multiplier-TS.py  maxwell-no-multiplier-waveguide-TS.py  maxwell-with-multiplier-waveguide-TS.py  poisson-equation.py
demos/multiphenics/mesh/: Annulus.geo
module/: PDE_exact.py  PETSc_utils.py  SLEPc_utils.py  fenics_utils.py  fenicsx_utils.py  gmsh_utils.py  meshio_utils.py  multiphenics_utils.py  psl_utils.py  pyvista_utils.py
scicomp_utils_dolfin/: README.md  environment.yml  environment_dev.yml  pyproject.toml
scicomp_utils_dolfin/.devcontainer/: Dockerfile  devcontainer.json
scicomp_utils_dolfin/demos/fenics/: Poisson_fenics_script.py  demo_dg-poisson.py  demo_periodic_square.py  fenics_basics_of_using_gmsh.py  fenics_complex_eigenvalue_problem.py  fenics_periodicity_using_gmsh.py
scicomp_utils_dolfin/demos/fenics/mesh/: Rectangle.geo
scicomp_utils_dolfin/demos/multiphenics/: heat-equation-Assimulo.py  heat-equation-TS.py  heat-equation-semilinear-TS.py  laplace-eigenvalues.py  maxwell-eigenvalues-no-multiplier.py  maxwell-eigenvalues-with-multiplier.py  maxwell-no-multiplier-TS.py  maxwell-no-multiplier-waveguide-TS.py  maxwell-with-multiplier-waveguide-TS.py  poisson-equation.py
scicomp_utils_dolfin/demos/multiphenics/mesh/: Disc.geo  cube.geo  sphere-shell.geo
scicomp_utils_dolfin/src/scicomp_utils_dolfin/: multiphenics_utils.py
scicomp_utils_dolfinx/: README.md  environment.yml  environment_dev.yml  environment_development.yml  pyproject.toml
scicomp_utils_dolfinx/.devcontainer/: Dockerfile  devcontainer.json  post_create_command.sh  post_start_command.sh
scicomp_utils_dolfinx/demos/fenicsx/: heat-equation.py  helmholtz_dtn.py  laplacian.py  laplacian_convergence.py  laplacian_dtn.py  laplacian_impedance.py  laplacian_monodimensional.py  laplacian_periodic.py  laplacian_periodic_Euler-coordinates.py  laplacian_periodic_direct.py  laplacian_vector.py
scicomp_utils_dolfinx/demos/fenicsx/mesh/: Annulus-2D.geo  Circle-Rectangle-Periodic.geo  sphere.geo
scicomp_utils_dolfinx/src/scicomp_utils_dolfinx/: dolfinx_mpc_utils.py  fenicsx_utils.py  gmsh_utils_fenicsx.py  pyvista_utils.py
scicomp_utils_mesh/: README.md  environment.yml  environment_dev.yml  pyproject.toml  ruff.toml
scicomp_utils_mesh/.devcontainer/: Dockerfile  devcontainer.json  post_create_command.sh  post_start_command.sh
scicomp_utils_mesh/demos/gmsh/: gmsh_utils_examples.py  meshCircleRectangle.py  meshCircleUnstructured.py  meshio_utils_examples.py
scicomp_utils_mesh/demos/gmsh/mesh/: Circle.geo
scicomp_utils_mesh/src/scicomp_utils_mesh/: gmsh_utils.py  meshio_utils.py
scicomp_utils_misc/: README.md  environment.yml  environment_dev.yml  pyproject.toml
scicomp_utils_misc/.devcontainer/: Dockerfile  devcontainer.json  post_create_command.sh  post_start_command.sh
scicomp_utils_misc/demos/PETSc-SLEPc-SciPy/: PETSc-matrix-creation.py  PETSc_solve_tridiagonal_system.py  SLEPc_example.py  SLEPc_qep.py  TS-DAE-Example.py  TS-heat-equation-FDM.py  complexEigenvalueProblem.py  rootfinding.py  test_kron_vector.py
scicomp_utils_misc/demos/PETSc-SLEPc-SciPy/Assimulo/: IDA-test-Assimulo.py
scicomp_utils_misc/demos/PETSc-SLEPc-SciPy/Laplacian-FDM/: Poisson_FDM_1D.py  Poisson_FDM_1D_examples.py
scicomp_utils_misc/src/scicomp_utils_misc/: PDE_exact.py  PETSc_utils.py  PIL_utils.py  SLEPc_utils.py  __init__.py  psl_utils.py  scipy_utils.py
src/scientific_computing_utils/: PETSc_utils.py  PIL_utils.py  SLEPc_utils.py  __about__.py  fenicsx_utils.py  gmsh_utils_fenics.py  gmsh_utils_fenicsx.py  multiphenics_utils.py  pyvista_utils.py
