[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scicomp_utils_dolfinx"
dynamic = ["version"]
description = 'Collection of utility modules for dolfinx.'
readme = "README.md"
requires-python = ">=3.9"
license = "GPL-3.0-only"
keywords = []
authors = [
  { name = "Florian Monteghetti", email = "f.monteghetti@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
]
dependencies = ['fenics-dolfinx<=0.9.1',
                'matplotlib',
                'scipy',
                'pyvista',
                'scicomp_utils_mesh @ git+https://github.com/fmonteghetti/python-scientific-computing-utils/@1c02c2b8efd256a2533fb9ba70ca93e5d197746c#subdirectory=scicomp_utils_mesh',
                'scicomp_utils_misc @ git+https://github.com/fmonteghetti/python-scientific-computing-utils/@69b634df9038f4dec5d1fe709a427f4b46e94767#subdirectory=scicomp_utils_misc'
                ]

[project.urls]
Documentation = "https://github.com/fmonteghetti/python-scientific-computing-utils/scicomp_utils_dolfinx#readme"
Issues = "https://github.com/fmonteghetti/python-scientific-computing-utils/issues"
Source = "https://github.com/fmonteghetti/python-scientific-computing-utils/scicomp_utils_dolfinx"

[tool.hatch]
version.path = "src/scicomp_utils_dolfinx/__init__.py"
metadata.allow-direct-references = true
