[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scicomp_utils_misc"
dynamic = ["version"]
description = 'Collection of miscellaneous utility modules.'
readme = "README.md"
requires-python = ">=3.9"
license = "GPL-3.0-only"
keywords = []
authors = [
  { name = "Florian Monteghetti", email = "f.monteghetti@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
]
dependencies = ['fenics',
                'scicomp_utils_mesh @ git+https://github.com/fmonteghetti/python-scientific-computing-utils/@split#subdirectory=scicomp_utils_mesh',
                'scicomp_utils_misc @ git+https://github.com/fmonteghetti/python-scientific-computing-utils/@split#subdirectory=scicomp_utils_misc']

[project.urls]
Documentation = "https://github.com/fmonteghetti/python-scientific-computing-utils/scicomp_utils_misc#readme"
Issues = "https://github.com/fmonteghetti/python-scientific-computing-utils/issues"
Source = "https://github.com/fmonteghetti/python-scientific-computing-utils/scicomp_utils_misc"

[tool.hatch]
version.path = "src/scicomp_utils_misc/__init__.py"