[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scicomp_utils_misc"
dynamic = ["version"]
description = 'Collection of miscellaneous utility modules.'
readme = "README.md"
requires-python = ">=3.9"
license = "GPL-3.0-only"
keywords = []
authors = [
  { name = "Florian Monteghetti", email = "f.monteghetti@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
]
dependencies = ['numpy','scipy','mpi4py','petsc4py','slepc4py','pillow']

# Extras (additional dependencies)
[project.optional-dependencies]

# Dependencies for development
dev = [
  "ruff>=0.6.3"
]

[project.urls]
Documentation = "https://github.com/fmonteghetti/python-scientific-computing-utils/scicomp_utils_misc#readme"
Issues = "https://github.com/fmonteghetti/python-scientific-computing-utils/issues"
Source = "https://github.com/fmonteghetti/python-scientific-computing-utils/scicomp_utils_misc"

[tool.hatch]
version.path = "src/scicomp_utils_misc/__init__.py"
